--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # LOGS
 logging.level.fr.deboissieu.calculassmat=DEBUG
+logging.level.org.springframework.security=INFO
 logging.level.org.springframework=INFO
 logging.file=logs/debug.log
 
